@@ -62,6 +62,7 @@ message ("Configure options:")
 message ("  ENABLE_TESTS: ${ENABLE_TESTS}")
 message ("  ENABLE_SANDBOX: ${ENABLE_SANDBOX}")
 message ("  ENABLE_EXAMPLES: ${ENABLE_EXAMPLES}")
+message ("  ENABLE_LINTER: ${ENABLE_LINTER}")
 message ("  BOOTSTRAP_CPM: ${BOOTSTRAP_CPM}")
 message ("  OVERRIDE_RUNTIME_OUTPUT_DIR: ${OVERRIDE_RUNTIME_OUTPUT_DIR}")
 message ("  DONT_LOOK_FOR_SFML: ${DONT_LOOK_FOR_SFML}")
